<resources>
    <string name="app_name">LuxVilla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_hint">Procurar casas</string>
    <string name="busca">Procurar casas</string>
    <string name="clearhistory">Limpar histórico</string>
    <string name="clear_info">Limpar todo o hestórico de pesquisa</string>
    <string name="defenicoes">Defenições</string>
    <string name="notificaçãoes">Notificações</string>
    <string name="nao_activado">Não activado</string>
    <string name="App_Version">Versão 4.0</string>
    <string name="sobre">Sobre</string>
    <string name="editprofile">Editar perfil</string>
    <string name="nouserbio">Um pequeno texto sobre si.</string>
    <string name="editdone">Feito!</string>
    <string name="username">User name</string>
    <string name="userbio">User bio</string>
    <string name="notificationsenabled">Notificações activadas</string>
    <string name="notificationsdesabled">Notificações desactivadas</string>
    <string name="night_mode">Modo noturno</string>
    <string name="night_mode_state_on">Modo noturno activado</string>
    <string name="night_mode_state_off">Modo noturno desactivado</string>
</resources>
