<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:selectable="true"
        android:enabled="true"
        android:key="@string/clearhistory"
        android:title="@string/clearhistory"
        android:summary="@string/clear_info"
        android:icon="@mipmap/ic_delete_black_24dp"/>

    <SwitchPreference
        android:key="@string/notificaçãoes"
        android:title="@string/notificaçãoes"
        android:defaultValue="true"
        android:summaryOn="@string/notificationsenabled"
        android:summaryOff="@string/notificationsdesabled"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <Preference
        android:key="@string/sobre"
        android:title="@string/sobre"
        android:summary="@string/App_Version"
        android:icon="@mipmap/ic_info_outline_black_24dp" />
</PreferenceScreen>